Lagt på autentisering och Swgger

--- a/JWTAuth.WebApi/appsettings.json
+++ b/JWTAuth.WebApi/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "dbConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=JWTAuthDEMO;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+  "Jwt": {
+    "Key": "Yh2k7QSu4l8CZg5p6X3Pna9L0Miy4D3Bvt0/&%¤kjhHGFXJVr87UcOj69Kqw5R2Nmf4FWs03Hdx",
+    "Issuer": "JWTAuthenticationServer",
+    "Audience": "JWTServicePostmanClient",
+    "Subject": "JWTServiceAccessToken"
+  }
 }
